# use_aws_mcp

./: Cargo.toml  README.md  schema.json
.github/workflows/: publish.yml
examples/: description_demo.rs
src/: error.rs  lib.rs  main.rs  mcp_server.rs  use_aws.rs
