[package]
name = "use_aws"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for AWS CLI operations"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
eyre = "0.6.8"
bstr = "1.12.0"
convert_case = "0.8.0"
async-trait = "0.1.87"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
crossterm = { version = "0.28.1", features = ["event-stream", "events"] }

[dev-dependencies]
tokio-test = "0.4"
